--- a/kubernetes/deploy-recreate.yaml
+++ b/kubernetes/deploy-recreate.yaml
@@ -18,8 +18,4 @@ spec:
       - image: httpd:alpine3.18
         name: httpd
   strategy:
-    type: RollingUpdate
-    rollingUpdate: 
-      maxUnavailable: 1
-      maxSurge: 1
-
+    type: Recreate
