Homarr, Metallb and nginx-ingress deployment

--- a/kubernetes/meale/deploy_test.yaml
+++ b/kubernetes/meale/deploy_test.yaml
@@ -25,6 +25,5 @@ spec:
             name: data
       volumes:
         - name: data
-          persistentVolumeClaim:
-            claimName: mealie-nfs
-
+          emptyDir:
+            sizeLimit: 500Mi
